# memo_product

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
libs/: pyproject.toml
libs/clients/http_client/: auth_client.py  user_client.py
libs/settings/: settings.py
memo_libs/: pyproject.toml
memo_libs/clients/: __init__.py  base.py  exceptions.py
memo_libs/clients/http_client/: auth_client.py  user_client.py
memo_libs/database/: __init__.py  base.py  db_helper.py
memo_libs/logging/: log_config.py
memo_libs/settings/: __init__.py  settings.py
nginx/: nginx.conf
services/auth_service/: .env.template  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  main.py
services/auth_service/alembic/: env.py
services/auth_service/alembic/versions/: 2026_02_03_1324-ace31c090df3_create_refresh_token_table.py
services/auth_service/app/: main.py
services/auth_service/app/api/: dependencies.py
services/auth_service/app/auth/: dependencies.py  helpers.py
services/auth_service/app/busines_logic/: auth_server.py
services/auth_service/app/core/: config.py
services/auth_service/app/crud/: tokens.py
services/auth_service/app/models/: __init__.py  base.py  db.py  db_helper.py  redis.py  redis_pool.py  redis_tokens.py  tokens.py
services/auth_service/app/schemas/: schemas.py
services/auth_service/app/utils/: jwt_utils.py
services/auth_service/auth/: README.md  dependencies.py  helpers.py
services/auth_service/core/: __init__.py  config.py
services/auth_service/core/busines_logic/: auth_server.py
services/auth_service/core/models/: base.py  db_helper.py  models.py  redis.py  tokens.py
services/auth_service/core/schemas/: schemas.py
services/auth_service/core/security/: utils.py
services/auth_service/crud/: tokens.py
services/auth_service/tests/e2e/: conftest.py
services/auth_service/tests/unit/: test_security_utils.py
services/auth_service/utils/: jwt_utils.py
services/libs/clients/: base.py  exceptions.py
services/libs/database/: base.py
services/libs/http_client/: auth_client.py  user_client.py
services/libs/logging/: log_config.py
services/user_service/: .env.template  Dockerfile  __init__.py  alembic.ini  docker-compose.yml  docker-entrypoint.sh  main.py  requirements.txt
services/user_service/alembic/: env.py
services/user_service/alembic/versions/: 2026_01_24_1946-9e83440dde5a_create_users_table.py  (+1 more)
services/user_service/api/api_v1/: __init__.py  (+1 more)
services/user_service/app/: main.py  main_test.py
services/user_service/core/: __init__.py  config.py
services/user_service/crud/: users.py
(+33 files in other folders)
