[tool.poetry]
package-mode = false # Это означает, что мы не используем poetry для сборки, а только для зависимостей

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {extras = ["standart"], version = "^0.40.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
asyncpg = "^0.31.0"
alembic = {extras = ["asyncio"], version = "^1.18.1"}
orjson = "^3.11.5"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)"
]
